# set_me_up

./: .gitignore  .gitmodules  Brewfile  Makefile  README.md  VS_code.txt  brew.txt  pyproject.toml
requirements/: brew.txt
scripts/: clear_dock  install_from_app_store
scripts/install/: ansible  apps.py  repos  repos.py
src/: data.py  functions.py  main.py  manifest.yml  pip.txt
src/VS_code/: settings.json
src/brew/: brew.txt
src/iterm/: com.googlecode.iterm2.plist
src/scripts/: change_computer_name
src/static/: brew.txt  brew_casks.txt  pip.txt
static/: app_store.txt  apps.yml  brew.txt  brew_cask.txt  com.googlecode.iterm2.plist  manifest.yml  repos.txt  repos.yml
static/apps/: brew.txt  python.txt  zsh.txt
static/iterm/: com.googlecode.iterm2.plist
static/preferences/: com.apple.AppleFileServer.plist  com.apple.AssetCache.plist  com.apple.Bluetooth.plist  com.apple.CoreRAIDServer.cfdb  com.apple.HIToolbox.plist  com.apple.MCX.plist  com.apple.PowerManagement.7450A0E0-62B1-553A-B6E6-14D42D18FC88.plist  com.apple.PowerManagement.plist  com.apple.SoftwareUpdate.plist  com.apple.TimeMachine.plist  com.apple.apsd.plist  com.apple.commerce.plist  com.apple.driver.AppleIRController.plist  com.apple.iokit.AmbientLightSensor.plist  com.apple.keyboardtype.plist  com.apple.loginwindow.plist  com.apple.networkextension.cache.plist  com.apple.networkextension.plist  com.apple.networkextension.uuidcache.plist  com.apple.noticeboard.plist  com.apple.powerlogd.plist  com.apple.preferences.accounts.plist  com.apple.security.systemidentities.plist  (+3 more)
(+22 files in other folders)
